[package]
name = "aoc-2019-18"
version = "0.1.0"
authors = ["Tomas Aschan <1550920+tomasaschan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
intcode = { path = "../intcode" }
itertools = "0.8.2"
