[package]
name = "intcode"
version = "0.1.0"
authors = ["Tomas Aschan <1550920+tomasaschan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "5.0.4"
rustyline-derive = "0.2.0"
queues = "1.1.0"
